Updated the readme file

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This folder will contain all code that goes into the PC running our system
+This repository will contain all of the vision system's code.
